完善了爬虫框架，但是仍没有加上爬虫定时器。新增了新闻爬虫的功能。可以爬取每日的新闻。

--- a/back/dataAnalysis/pom.xml
+++ b/back/dataAnalysis/pom.xml
@@ -179,11 +179,6 @@
             <version>2.6</version>
         </dependency>
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.75</version>
-        </dependency>
-        <dependency>
             <groupId>net.sourceforge.htmlunit</groupId>
             <artifactId>htmlunit</artifactId>
             <version>2.25</version>
@@ -204,6 +199,13 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
+        </dependency>
+
+<!--        csv工具包-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.5</version>
         </dependency>
 
     </dependencies>
